@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.010.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.012.
 use strict;
 use warnings;
 
@@ -20,6 +20,7 @@ my %WriteMakefileArgs = (
     "Getopt::Long" => 0,
     "Pod::Usage" => 0,
     "Proc::PID::File" => 0,
+    "Term::ReadKey" => 0,
     "constant" => 0,
     "strict" => 0,
     "warnings" => 0
@@ -45,6 +46,7 @@ my %FallbackPrereqs = (
   "IPC::Open3" => 0,
   "Pod::Usage" => 0,
   "Proc::PID::File" => 0,
+  "Term::ReadKey" => 0,
   "Test::More" => 0,
   "Test::Most" => 0,
   "constant" => 0,
